infra/database/test-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-db
  namespace: postgres
  annotations:
    io.cilium/lb-ipam-ips: 192.168.1.160
spec:
  type: LoadBalancer
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
