infra/database/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: postgres-ui-http-route
  namespace: postgres
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "postgres.stonegarden.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: postgres-operator-ui
          port: 80
