infra/database/test-db-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-db
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test-db.stonegarden.dev`)
      kind: Rule
      services:
        - name: test
          port: 5432
